--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "declaration": true
+    "declaration": true,
+    "declarationDir": "dts"
   },
-  "include": ["./src"]
+  "include": ["./src"],
+  "exclude": ["./node_modules", "./dist"]
 }
