--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
   "name": "@kgierke/formkit-inputs",
   "version": "0.1.3",
   "description": "Collection of FormKit inputs.",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./*": "./dist/*"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "rollup --config",
