--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "@kgierke/formkit-inputs",
   "version": "0.1.3",
   "description": "Collection of FormKit inputs.",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./*": "./dist/*"
+  },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "prebuild": "rimraf dist",
+    "build": "rollup --config",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
@@ -25,14 +35,21 @@
     "url": "https://github.com/kgierke/formkit-inputs/issues"
   },
   "homepage": "https://github.com/kgierke/formkit-inputs#readme",
+  "peerDependencies": {
+    "@formkit/core": "1.0.0-beta.6",
+    "@formkit/inputs": "1.0.0-beta.6"
+  },
   "dependencies": {
-    "@formkit/core": "1.0.0-beta.5",
-    "@formkit/inputs": "1.0.0-beta.5",
-    "nanoid": "^3.3.1"
+    "nanoid": "3.3.1"
   },
   "devDependencies": {
     "@formkit/vue": "1.0.0-beta.6",
-    "typescript": "^4.6.2",
+    "@rollup/plugin-typescript": "8.3.1",
+    "rimraf": "3.0.2",
+    "rollup": "2.70.1",
+    "rollup-plugin-delete": "2.0.0",
+    "rollup-plugin-dts": "4.2.0",
+    "typescript": "4.6.2",
     "vitepress": "0.22.3",
     "vuepress": "2.0.0-beta.36"
   }
