--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nanoid": "3.3.1"
   },
   "devDependencies": {
+    "@formkit/themes": "1.0.0-beta.6",
     "@formkit/vue": "1.0.0-beta.6",
     "@rollup/plugin-typescript": "8.3.1",
     "rimraf": "3.0.2",
