--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "@formkit/themes": "1.0.0-beta.6",
     "@formkit/vue": "1.0.0-beta.6",
     "@rollup/plugin-typescript": "8.3.1",
+    "cssnano": "5.1.4",
     "rimraf": "3.0.2",
     "rollup": "2.70.1",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-dts": "4.2.0",
+    "rollup-plugin-postcss": "4.0.2",
     "typescript": "4.6.2",
     "vitepress": "0.22.3",
     "vuepress": "2.0.0-beta.36"
