--- a/package.json
+++ b/package.json
@@ -35,16 +35,20 @@
     "url": "https://github.com/kgierke/formkit-inputs/issues"
   },
   "homepage": "https://github.com/kgierke/formkit-inputs#readme",
+  "workspaces": [
+    "src",
+    "docs"
+  ],
   "peerDependencies": {
-    "@formkit/core": "1.0.0-beta.9",
-    "@formkit/inputs": "1.0.0-beta.9"
+    "@formkit/core": "^1.0.0-beta.11",
+    "@formkit/inputs": "^1.0.0-beta.11"
   },
   "dependencies": {
     "nanoid": "3.3.1"
   },
   "devDependencies": {
-    "@formkit/themes": "1.0.0-beta.9",
-    "@formkit/vue": "1.0.0-beta.9",
+    "@formkit/themes": "1.0.0-beta.11",
+    "@formkit/vue": "1.0.0-beta.11",
     "@rollup/plugin-typescript": "8.3.1",
     "cssnano": "5.1.4",
     "rimraf": "3.0.2",
@@ -54,6 +58,6 @@
     "rollup-plugin-postcss": "4.0.2",
     "typescript": "4.6.2",
     "vitepress": "0.22.3",
-    "vuepress": "2.0.0-beta.36"
+    "vuepress": "2.0.0-beta.51"
   }
 }
